# GDP-PQC

./: .gitignore  Benchmark.c  Benchmark_server  Benchmark_server.c  README.md  asn1write.c  cert_write.c  client-pq-tls13.c  client-pq-tls13.h  cpu-usage.sh  dilithium.c  dilithium.h  git_token  pem.c  pk.c  server-pq-tls13.c  server-pq-tls13.h  sphincsR1vsR3  ssl_ciphersuites.h  toolchain_pico.cmake
Alg-Info/: alg_info_cert.txt  alg_info_kem.txt
Analysis/: parse.py
Benchmarks/: README.md  alg_info_kem.txt  mDecKem.json  mEncKem.json  mKeyKem.json  mKeySig.json  mSignSig.json
Certs/: dilithium_aes_level2_entity_key.pem  dilithium_aes_level2_entity_req.pem  dilithium_aes_level2_root_key.pem  dilithium_aes_level3_entity_key.pem  dilithium_aes_level3_entity_req.pem  dilithium_aes_level3_root_cert.pem  dilithium_aes_level3_root_key.pem  dilithium_aes_level5_entity_cert.pem  dilithium_aes_level5_entity_key.pem  dilithium_aes_level5_entity_req.pem  dilithium_aes_level5_root_cert.pem  dilithium_level2_entity_req.pem  dilithium_level2_root_cert.pem  dilithium_level2_root_key.pem  dilithium_level3_entity_cert.pem  dilithium_level3_entity_req.pem  dilithium_level3_root_cert.pem  dilithium_level3_root_key.pem  dilithium_level5_entity_req.pem  dilithium_level5_root_key.pem  falcon_level1_entity_key.pem  falcon_level1_entity_req.pem  falcon_level1_root_cert.pem  falcon_level1_root_key.pem  falcon_level5_entity_key.pem  falcon_level5_root_cert.pem  sphincs_fast_level1_entity_req.pem  sphincs_fast_level1_root_cert.pem  sphincs_fast_level3_root_key.pem  sphincs_small_level1_entity_key.pem  sphincs_small_level1_entity_req.pem  sphincs_small_level1_root_key.pem  sphincs_small_level3_entity_key.pem  sphincs_small_level3_root_key.pem  sphincs_small_level5_entity_cert.pem
Certs/mbedtls/: DILITHIUM.md  README.md  dilithium_level2.txt  dilithium_level2_ca_root_cert.pem  dilithium_level2_ca_root_key.pem  dilithium_level2_entity_cert.pem  dilithium_level2_entity_key.pem  dilithium_level3.txt  dilithium_level3_ca_root_cert.pem  dilithium_level3_ca_root_key.pem  dilithium_level3_entity_cert.pem  dilithium_level3_entity_key.pem  dilithium_level5.txt  dilithium_level5_ca_root_cert.pem  dilithium_level5_ca_root_key.pem  dilithium_level5_entity_cert.pem  dilithium_level5_entity_key.pem  sphincs_r2_ca_root_cert.pem  sphincs_r2_ca_root_key.pem  sphincs_r2_entity_cert.pem  sphincs_r2_entity_key.pem  sphincs_r3_ca_root_cert.pem  sphincs_r3_ca_root_key.pem  sphincs_r3_entity_cert.pem  sphincs_r3_entity_key.pem
ESP32/: README.md
OfficialResults/Client/Heap/: 113b.txt  (+4 more)
OfficialResults/Pico/: Latency.txt
Pi-3/: server-pq-tls13.c
Pi-3/Analysis/: parse.py
Pi-3/Heap/: Benchmark.c  client.c  server  server-pq-tls13.c  server.c
Pi-3/MbedTLS/: Makefile  new_certs.h  spx_params.h  ssl_client1.c  ssl_client1.h  ssl_server.c  ssl_server.h  std_dev.c  std_dev.h
Pi-3/Power/: Benchmark_Power.c  client.c  server.c
Pi-3/Stack/: get_results.sh  test_client.sh  test_server.sh
Pi-3/WolfSSL/: client-pq-tls13.c  server-pq-tls13.h
Pi-Pico/: PQC.md  Pico Benchmarking.md  client.py  dmm_control.py  full_test_run.sh  ssl_server
Pi-Pico/Benchmarks/: mbedtls_config.h  pico_client.c  pico_client.h
Pi-Pico/Benchmarks/Heap/: CMakeLists.txt  client.c
Pi-Pico/Benchmarks/Latency/src/pqc_stats/: CMakeLists.txt
Pi-Pico/Pico Flash/: CMakeLists.txt  flash.h  flashmem.h  flashobj.h  main.c  memobj.h
Pi-Pico/Pico Timers/: CMakeLists.txt  main.c  systick.h  systick_old.h  utime.h
Pi-Pico/benchmarks/: pico_client.h
Pi-Pico/benchmarks/Latency/: CMakeLists.txt
Pi-Pico/benchmarks/Latency/src/pqc_utimer/: utimer.c
Pi-Pico/config/: client1.c  client3.c  ecdsa_client.c  kyber_params_l1.h  new_certs_l5.h
Pi-Pico/controller/: dmm_control.py  new_build.sh  single_test.sh  termination_server.py  test.sh
Pi-Pico/controller/Benchmarks/Cycles/src/pqc_flash/: CMakeLists.txt
Pi-Pico/mbedtls/pico_mbedtls/: CMakeLists.txt
Pi-Pico/pico-sdk/src/rp2_common/pico_mbedtls/: CMakeLists.txt
Pi-Pico/pico_pqc_sdk/: CMakeLists.txt
Pi-Pico/pico_pqc_sdk/src/pqc_systick/: CMakeLists.txt  systick.c
Pi-Pico/pico_pqc_sdk/src/pqc_systick/include/pqc-pico/: systick.h
Pi-Pico/pico_pqc_sdk/src/pqc_utimer/: CMakeLists.txt
Pi-Pico/pico_pqc_sdk/src/pqc_utimer/include/pqc-pico/: utimer.h
Pi-Pico/pico_w_dilithium_client/: CMakeLists.txt  lwipopts.h  mbedtls_config.h  new_build.sh  pico_w_dilithium_client.c
Pi-Pico/pico_w_pqc_tls_client/: picow_tls_client.c
Pi-Pico/pico_w_tls_client/: CMakeLists.txt  picow_tls_client.c
Pi-Pico/pico_w_tls_client_pqc/: certs.c  config.h  lwipopts.h  mbedtls_config.h  pico_w_tls_client_pqc.c
Pi-Pico/pqc-pico/: CMakeLists.txt  picow_tls_client.c
Pi-Pico/pqc-pico/old/: CMakeLists.txt
Pi-Pico/tls-ex/: CMakeLists.txt
Pi-Pico/tls_server/: server.c  ssl_server.c  termination_client.py  test.sh
QuantumCloud/: README.md  qc_pi3_measure_codes_henry.c
Results/: client-heap-usage.txt  client-latency-ecc.txt  client-latency-falcon-l1.txt  server-latency-falcon-l1.txt  server-latency-falcon-l5.txt
certs/: dilithium_aes_level2_entity_cert.pem  dilithium_level3_entity_key.pem  falcon_level5_entity_cert.pem  sphincs_fast_level1_root_key.pem  sphincs_fast_level3_entity_key.pem  sphincs_fast_level5_entity_cert.pem  sphincs_fast_level5_entity_req.pem  sphincs_fast_level5_root_cert.pem  sphincs_fast_level5_root_key.pem  sphincs_small_level1_root_cert.pem
mbedtls/include/: CMakeLists.txt
mbedtls/programs/: CMakeLists.txt
pico-experimental/removed files/: pk_wrap.c
pico-full-mbedtls/GDP-PQC-full-mbedtls/: README.md
pico-full-mbedtls/GDP-PQC-full-mbedtls/Pi-Pico/pico_w_tls_client_pqc/: CMakeLists.txt
pico/pico_w_tls_client/: CMakeLists.txt
pico/pico_w_tls_client_new/: mbedtls_config.h  pico_w_tls_client_new.c
pico/pico_w_tls_client_pqc/: lwipopts.h  mbedtls_config.h  new_build.sh  pico_certs.h  pico_w_tls_client_pqc.c
pico/pico_w_tls_client_pqc_full/: mbedtls_config.h  new_build.sh  pico_certs.c  pico_w_tls_client_pqc.c
pico/wolf-test/: Benchmark.c  CMakeLists.txt  client-pq-tls13.h
(+378 files in other folders)
