if(NOT TARGET pqc_utimer_headers)
    add_library(pqc_utimer_headers INTERFACE)
    target_include_directories(pqc_utimer_headers INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
    target_link_libraries(pqc_utimer_headers INTERFACE pico_stdlib)
endif()

if(NOT TARGET pqc_utimer)
    add_library(pqc_utimer INTERFACE)
    target_compile_definitions(pqc_utimer INTERFACE LIB_PQC_UTIMER=1)
    target_sources(pqc_utimer INTERFACE ${CMAKE_CURRENT_LIST_DIR}/utimer.c)
    target_link_libraries(pqc_utimer INTERFACE pqc_utimer_headers)
endif()