if(NOT TARGET pqc_stats_headers)
    add_library(pqc_stats_headers INTERFACE)
    target_include_directories(pqc_stats_headers INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
    target_link_libraries(pqc_stats_headers INTERFACE pico_stdlib)
endif()

if(NOT TARGET pqc_stats)
    add_library(pqc_stats INTERFACE)
    target_compile_definitions(pqc_stats INTERFACE LIB_PQC_STATS=1)
    target_sources(pqc_stats INTERFACE ${CMAKE_CURRENT_LIST_DIR}/stats.c)
    target_link_libraries(pqc_stats INTERFACE pqc_stats_headers)
endif()